<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_bg_screen">
    <!--tools:showIn="navigation_view">-->

    <item
        android:id="@+id/nav_history"
        android:title="@string/ride_history"
        android:icon="@drawable/ic_box"/>

    <item
        android:id="@+id/nav_dummy_history"
        android:title="@string/fair_estimation_history"
        android:icon="@drawable/ic_box"/>
    <item
        android:id="@+id/nav_promotions"
        android:title="@string/promotions"
        android:icon="@drawable/ic_birthday"/>
    <item
        android:id="@+id/nav_notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_box"/>
    <item
        android:id="@+id/nav_help"
        android:title="@string/help"
        android:icon="@drawable/ic_box"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_box"/>
    <item
        android:id="@+id/nav_language"
        android:title="@string/language"
        android:icon="@drawable/ic_box"/>






</menu>
